# loom

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_ORIGINAL.md  Dockerfile  OPUS2.md  README.md  ROADMAP.md  codex_prompt.md  docker-compose.yml  eslint.config.js  nakama.yml  package-lock.json  package.json  test-output.txt  tsconfig.json  vitest.config.ts
.claude/: agents.md  settings.json
.github/: CODEOWNERS  pull_request_template.md
Bible/: FIX1-complete-world-stubs.md  FIX5-entry-gap-fill.md  FIX7-technical-issues.md  FIX8-commerce-bible.md  KOYDO-WORLDS-COMPLETE-EXPANSION-V5-FINAL_1.md  KOYDO-WORLDS-MASTER-BIBLE-V5-FINAL.md  KOYDO-WORLDS-MEGA-EXPANSION-V5.md  koydo-universe-realworld-bible-v2.docx  koydo-universe-realworld-bible.docx
agents/: Claude_master_prompt1.md  README.md  ai_company_brain.md  codeomni.md  compensation_formula_matrix.md  executive_council.md  persona_activation_protocol.md  persona_library_comprehensive_review.md  persona_router.md  startup_operating_system.md
artifacts/: inspect_dump_basic.py  inspect_dump_exception.py  inspect_dump_stack.py  inspect_dump_thread_attrs.py  inspect_dump_threads.py  inspect_minidump_pkg.py  tmp_create_koydo_startup_map.py  tmp_probe_unreal_map_api.py
db/: migrate.ts  seed-content.ts
docs/: API.md  ARCHITECTURE.md  CHARACTER-DESIGN-BRIEF.md  CHARACTERS.md  DATABASE.md  DEVELOPMENT-GUIDE.md  DEVELOPMENT.md  LAUNCH-RUNBOOK.md  NEXT-STEPS.md  REPO-STATE-2026-03-18.md  SESSION-LOG-2026-03-19.md  UE5.md  character-manifest.json  (+1 more)
native/event-bus/: Cargo.toml
native/event-bus/src/: lib.rs
(+2777 files in other folders)
