[package]
name = "loom-event-bus"
version = "0.1.0"
edition = "2021"
description = "High-performance event bus for Project Loom — NAPI addon for Node.js"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"
crossbeam-channel = "0.5"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
